--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,19 @@
 	box-sizing: border-box;
 }
 body {
-	background-color: var(--mainbg);
+	/* background-color: var(--mainbg); */
+	background: #000428; /* fallback for old browsers */
+	background: -webkit-linear-gradient(
+		to top,
+		#004e92,
+		#000428
+	); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(
+		to top,
+		#004e92,
+		#000428
+	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 	color: var(--primary);
 	font-family: "Rubik", sans-serif;
 	margin: 0;
@@ -24,6 +36,7 @@ body {
 	border-radius: 0.4rem;
 	overflow: hidden;
 	transition: transform 0.2s;
+	position: relative;
 }
 .movie:hover {
 	cursor: pointer;
@@ -48,10 +61,14 @@ body {
 }
 .movie-info h6 {
 	margin: 0;
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 }
 .head {
 	color: #fde047;
+}
+
+.head:hover {
+	transform: scale(1.1);
 }
 
 header {
@@ -88,7 +105,7 @@ header input {
 .tag {
 	background-color: var(--mainbg);
 	padding: 0.5rem;
-	border-radius: 50%;
+	border-radius: 0.5rem;
 	font-weight: bold;
 }
 .tag.green {
@@ -99,4 +116,34 @@ header input {
 }
 .tag.red {
 	color: red;
+}
+
+.overlay {
+	position: absolute;
+	background: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	transition: 0.5s ease;
+	opacity: 0;
+	bottom: 0;
+	font-size: 15px;
+	padding: 15px;
+	text-align: center;
+}
+
+.movie:hover .overlay {
+	opacity: 1;
+}
+
+.fav span {
+	margin-right: 1rem;
+}
+
+h2 {
+	text-align: center;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	font-family: "Luckiest Guy", cursive;
+	color: #67e8f9;
+	-webkit-text-stroke: 2px black;
+	font-size: 3rem;
 }
